@@ -197,6 +197,7 @@ fully support the editing toolbar, but was found to be too confusing.
   talk notification on PHP 5.0.5
 * Fix Parser::unstrip on PHP 5.1.0RC4
 * (bug 3852) "Redirected from" link no longer obscured on double-redirects
+* (bug 3845) Update attribute.php for 1.5 schema
 
 
 === Caveats ===
